text changed in html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h2>Voorhees College</h2>
             <h3>Vellore - 01</h3><br><br><br><br>
             <p class="slogan">ca Symposim</p>
-            <p class="slogan-1">"in vain without god"</p></p>
+            <p class="slogan-1">"In vain without god"</p></p>
         </div>
 
     </div>
