--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@
 
         <div class="about">
             <!-- <img class="image" src="/droid-combat/images/college.jpg" alt=""> -->
+          <div class="college_name">
             <h2>Voorhees College</h2>
-            <h3>Vellore - 01</h3><br><br><br><br>
-            <p class="slogan">ca Symposim</p>
-            <p class="slogan-1">"In vain without god"</p></p>
+            <h3>Vellore - 01</h3><br>
+            <p class="slogan-1">"in vain without god"</p>
+          </div>
+          <div>
+            <p class="slogan">depatment of bca</p>
+            <p class="slogan-1">porudly presents</p><br><br>
+            <h2>CA symposium</h2>
+          </div>
         </div>
 
     </div>
@@ -33,8 +39,7 @@
 
     <h2 class="heading">event details</h2>
 
-    <div>
-      <div>
+    <div class="divider">
       <div class="container">
         <div class="card-carousel">
           <div class="card" id="1">
