added a div for space

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h3>Vellore - 01</h3><br>
             <p class="slogan-1">"in vain without god"</p>
           </div>
-          <div>
+          <div class="college_name">
             <p class="slogan">depatment of bca</p>
             <p class="slogan-1">porudly presents</p><br><br>
             <h2>CA symposium</h2>
