--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <p class="slogan-1">"in vain without god"</p>
           </div>
           <div class="college_name">
-            <p class="slogan">depatment of bca</p>
-            <p class="slogan-1">porudly presents</p><br><br>
+            <p class="slogan">department of bca</p>
+            <p class="slogan-1">proudly presents</p><br><br>
             <h2>CA symposium</h2>
           </div>
         </div>
@@ -77,6 +77,63 @@
               - ON Stage Event <br>
               - Co-ord: Haswanth (8925340032)</p>
           </div>
+        <div class="card" id="6">
+          <div class="image-container"></div>
+          <p class="head">mind map</p>
+          <p class="content">- Maximum Of 2 Members <br>
+            - ON Stage Event <br>
+            - Co-ord: Haswanth (8925340032)</p>
+        </div>
+      <div class="card" id="7">
+        <div class="image-container"></div>
+        <p class="head">mind map</p>
+        <p class="content">- Maximum Of 2 Members <br>
+          - ON Stage Event <br>
+          - Co-ord: Haswanth (8925340032)</p>
+      </div>
+    <div class="card" id="8">
+      <div class="image-container"></div>
+      <p class="head">mind map</p>
+      <p class="content">- Maximum Of 2 Members <br>
+        - ON Stage Event <br>
+        - Co-ord: Haswanth (8925340032)</p>
+    </div>
+  <div class="card" id="9">
+    <div class="image-container"></div>
+    <p class="head">mind map</p>
+    <p class="content">- Maximum Of 2 Members <br>
+      - ON Stage Event <br>
+      - Co-ord: Haswanth (8925340032)</p>
+  </div>
+<div class="card" id="10">
+  <div class="image-container"></div>
+  <p class="head">mind map</p>
+  <p class="content">- Maximum Of 2 Members <br>
+    - ON Stage Event <br>
+    - Co-ord: Haswanth (8925340032)</p>
+</div>
+<div class="card" id="11">
+  <div class="image-container"></div>
+  <p class="head">mind map</p>
+  <p class="content">- Maximum Of 2 Members <br>
+    - ON Stage Event <br>
+    - Co-ord: Haswanth (8925340032)</p>
+</div>
+<div class="card" id="12">
+  <div class="image-container"></div>
+  <p class="head">mind map</p>
+  <p class="content">- Maximum Of 2 Members <br>
+    - ON Stage Event <br>
+    - Co-ord: Haswanth (8925340032)</p>
+</div>
+<div class="card" id="13">
+  <div class="image-container"></div>
+  <p class="head">mind map</p>
+  <p class="content">- Maximum Of 2 Members <br>
+    - ON Stage Event <br>
+    - Co-ord: Haswanth (8925340032)</p>
+</div>
+
         <a href="#" class="visuallyhidden card-controller">Carousel controller</a>
         
       </div>
