--- a/index.html
+++ b/index.html
@@ -154,37 +154,41 @@
         <hr>
       </div>
 
+    <h2 class="heading">location</h2>
+    <div class="location">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.95108548535!2d79.12945577484432!3d12.910865416207432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bad38e7f4cba0f3%3A0xb0c7baa83406ee8f!2sVoorhees%20College!5e0!3m2!1sen!2sin!4v1707669249239!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div> 
+
       <!-- back to top -->
       <div class="center">
-      <a href="#"><button>
-        <div class="text heading">
-          <span>Back</span>
-          <span>to</span>
-          <span>top</span>
-        </div>
-        <div class="clone heading">
-          <span>Back</span>
-          <span>to</span>
-          <span>top</span>
-        </div>
-        <svg
-          stroke-width="2"
-          stroke="currentColor"
-          viewBox="0 0 24 24"
-          fill="none"
-          class="h-6 w-6"
-          xmlns="http://www.w3.org/2000/svg"
-          width="20px"
-        >
-          <path
-            d="M14 5l7 7m0 0l-7 7m7-7H3"
-            stroke-linejoin="round"
-            stroke-linecap="round"
-          ></path>
-        </svg>
-      </button></a>
-    </div>
-      
+        <a href="#"><button>
+          <div class="text heading">
+            <span>Back</span>
+            <span>to</span>
+            <span>top</span>
+          </div>
+          <div class="clone heading">
+            <span>Back</span>
+            <span>to</span>
+            <span>top</span>
+          </div>
+          <svg
+            stroke-width="2"
+            stroke="currentColor"
+            viewBox="0 0 24 24"
+            fill="none"
+            class="h-6 w-6"
+            xmlns="http://www.w3.org/2000/svg"
+            width="20px"
+          >
+            <path
+              d="M14 5l7 7m0 0l-7 7m7-7H3"
+              stroke-linejoin="round"
+              stroke-linecap="round"
+            ></path>
+          </svg>
+        </button></a>
+      </div>
     <script src="script.js" defer></script>
 </body>
 
