--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <p class="head">DOODLE <br> (logo inventor)</p>
               <p class="content">- Maximum of 1 participant <br>
                 - OFF Stage Event <br>
-                - Co-ord: Haswanth  Megaraj (7871199626)</p>
+                - Co-ord: Megaraj (7871199626)</p>
             </div>
             
           <div class="card" id="8">
